# ml-predictor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TECHNICAL.md  main.py  pyproject.toml  requirements.txt
